--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "license": "MIT",
   "scripts": {
     "list": "lerna list",
-    "start": "webpack-dev-server --config build/webpack.config.base.js",
-    "clean:lib": "rimraf node_modules"
+    "dev": "webpack-dev-server --config build/webpack.config.base.js",
+    "build": "webpack --config build/webpack.config.build.js",
+    "reinstall": "rimraf node_modules && yarn"
   },
   "peerDependencies": {
     "vue": "^3.0.11"
   },
-  "dependencies": {
+  "devDependencies": {
+    "lerna": "^4.0.0",
     "@babel/core": "^7.13.15",
     "babel-loader": "^8.2.2",
     "@vue/compiler-sfc": "^3.0.9",
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^4.3.0",
+    "rimraf": "^3.0.2",
     "vue": "^3.0.11",
     "vue-loader": "^16.2.0",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
-  },
-  "devDependencies": {
-    "lerna": "^4.0.0"
   },
   "workspaces": [
     "packages/*"
