--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "list": "lerna list",
-    "dev": "webpack-dev-server --config build/webpack.config.base.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.base.js",
     "build": "webpack --config build/webpack.config.build.js",
     "reinstall": "rimraf node_modules && yarn"
   },
@@ -12,13 +12,18 @@
     "vue": "^3.0.11"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
     "@babel/core": "^7.13.15",
-    "babel-loader": "^8.2.2",
     "@vue/compiler-sfc": "^3.0.9",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^4.3.0",
+    "lerna": "^4.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.2.4",
     "vue": "^3.0.11",
     "vue-loader": "^16.2.0",
     "vue-template-compiler": "^2.6.12",
