eslint/prettier/stylelint

--- a/package.json
+++ b/package.json
@@ -6,22 +6,39 @@
     "list": "lerna list",
     "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
     "build": "webpack --config build/webpack.config.prod.js",
-    "reinstall": "rimraf node_modules && yarn"
+    "reinstall": "rimraf node_modules && yarn",
+    "lint:packages": "eslint --ext .ts,.js,.vue,.css,.json,.scss packages --fix",
+    "lint:website": "eslint --ext .ts,.js,.vue,.css,.json,.scss website --fix",
+    "lint": "yarn lint:packages && yarn lint:website"
   },
   "peerDependencies": {
     "vue": "^3.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "@vue/compiler-sfc": "^3.0.9",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.9.0",
     "html-webpack-plugin": "^4.3.0",
     "lerna": "^4.0.0",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
     "ts-loader": "^8.0.3",
     "typescript": "^4.2.4",
     "vue": "^3.0.11",
