--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "^7.9.0",
     "html-webpack-plugin": "^4.3.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "sass": "^1.32.8",
@@ -47,9 +48,21 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "yorkie": "^2.0.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "pre-push": "yarn lint"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+      "yarn lint",
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
