--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "list": "lerna list",
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --open",
     "build": "webpack --config build/webpack.config.prod.js",
     "reinstall": "rimraf node_modules && yarn",
     "lint:packages": "eslint --ext .ts,.js,.vue,.css,.json,.scss packages --fix",
