--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "scripts": {
     "list": "lerna list",
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --open",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
     "build": "webpack --config build/webpack.config.prod.js",
     "reinstall": "rimraf node_modules && yarn",
     "lint:packages": "eslint --ext .ts,.js,.vue,.css,.json,.scss packages --fix",
     "lint:website": "eslint --ext .ts,.js,.vue,.css,.json,.scss website --fix",
-    "lint": "yarn lint:packages && yarn lint:website"
+    "lint": "yarn lint:packages && yarn lint:website",
+    "build:docs": "webpack --config build/webpack.config.dev.js"
   },
   "peerDependencies": {
     "vue": "^3.0.11"
@@ -27,9 +28,14 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
+    "highlight.js": "^10.7.2",
     "html-webpack-plugin": "^4.3.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "markdown-it": "^12.0.6",
+    "markdown-it-anchor": "^5.3.0",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^3.0.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "sass": "^1.32.8",
@@ -40,10 +46,13 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
+    "transliteration": "^2.2.0",
     "ts-loader": "^8.0.3",
     "typescript": "^4.2.4",
     "vue": "^3.0.11",
+    "vue-i18n": "^9.1.6",
     "vue-loader": "^16.2.0",
+    "vue-router": "^4.0.6",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
