--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -1,12 +1,9 @@
 {
   "name": "admin-ui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "version": "0.0.1",
+  "main": "dist/index.js",
+  "license": "ISC",
+  "dependencies": {
+    "@admin-ui/button": "^0.0.0"
+  }
 }
